# freestyle-keys

./: .pre-commit-config.yaml  AUTHORS  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
freestyle_keys/: libre2.py
