# SPDX-FileCopyrightText: 2023 The freestyle-keys Authors
#
# SPDX-License-Identifier: 0BSD

[metadata]
name = freestyle-keys
description = Cryptographic keys used by FreeStyle Libre 2 glucometers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glucometers-tech/freestyle-keys
author = Diego Elio Pettenò
author_email = flameeyes@flameeyes.com
license = Freely Distributable
license_files =
    AUTHORS
    LICENSE
    LICENSES/*
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Developers
    License :: Freely Distributable
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Medical Science Apps.
keywords =
    glucometer
    diabetes
    freestyle
    abbott

[options]
packages = find:
install_requires =
python_requires = ~= 3.7

[options.extras_require]
dev =
    mypy
    pre-commit
    pytest-mypy
    setuptools_scm

[options.package_data]
* = py.typed

[flake8]
max-line-length = 88
# Ignore long line errors, black takes care of them.
extend-ignore = E501
